# occlusion-mask

./: LICENSE  README.md  pyproject.toml
examples/: debug_torch_mask_ascii.py  visualize_mask_2d.py  visualize_occlusion.py
notebooks/: occlusion_demo.ipynb
src/occlusion_mask/: __init__.py  geometry.py  torch_geometry.py  visualization.py
tests/: test_example_visualize_mask_2d.py  test_example_visualize_occlusion.py  test_geometry.py  test_torch_geometry.py
