[project]
name = "occlusion-mask"
version = "0.1.0"
description = "Sensor scan-volume and aircraft occlusion modeling"
readme = "README.md"
authors = [
    { name = "Serrano", email = "cserrano@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "plotly>=6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
