[project]
name = "occlusion-mask"
version = "0.1.0"
description = "Sensor scan-volume and aircraft occlusion modeling"
readme = "README.md"
authors = [
    { name = "Serrano", email = "cserrano@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "plotly>=6.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "dash>=3.2",
    "ipykernel>=6.29",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
